# MutationCompare

./: .gitignore  README.md  analyse_pit_xml.py  config.example.py  gemini_api.py  llm_mutation_engine.py  llm_mutation_results.csv  main.py  main_llm.py  major_test_module.py  mutations.xml  openrouterkeylimits.py  pit_test_module.py  projects.csv  pyproject.toml  run-codellama.py  run-codellama_cpp.py  test.py  testopenrouter-xai.py  testopenrouter.py  utils.py
environment/: config.example.py  projects.csv  projects.example.csv
llm/: llm_mutation_engine_module.py  llm_mutation_engine_with_test.py
modules/: api_key_pool.py  defects4j_module.py  llm_mutation_engine_module.py  llm_test_module.py  major_test_module.py  pit_test_module.py
mutants/Csv_1/org.apache.commons.csv.CSVFormat/: CSVFormat_Mutant_1.java
results/: cli_major_mutations.csv  cli_pit_mutations.csv  csv_major_mutations.csv  csv_pit_mutations.csv
results/google/: llm_mutation_results.csv
results/openai/: llm_mutation_results.csv
