[project]
name = "mutationcompare"
version = "0.0.1"
description = "A POC to test LLM mutation testing"
authors = [
    {name = "mattiamarilli",email = "mattiamarilli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "google-genai (>=1.53.0,<2.0.0)",
    "ollamafreeapi (>=0.1.3,<0.2.0)",
    "pandas (>=2.3.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
